--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,7 @@
   <body class="page__body">
     <header class="page-header">
       <a class="page-header__logo">
-        <img src="https://via.placeholder.com/86x35" width="86" height="35" alt="Интренет-магазин «Мишка»">
+        <img src="https://via.placeholder.com/86x35" width="86" height="35" alt="Интернет-магазин «Мишка»">
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
@@ -45,5 +45,19 @@
         </div>
       </nav>
     </header>
+    <main class="page-main">
+      <h1 class="visually-hidden">Интернет-магазин «Мишка» — милые штуки ручной работы для дома</h1>
+      <section class="slogan">
+        <div class="slogan__wrapper">
+          <h2 class="slogan__title">
+            Милые штуки ручной работы для дома
+          </h2>
+          <p class="slogan__intro">
+            Бесплатная доставка по России
+          </p>
+        </div>
+      </section>
+
+    </main>
   </body>
 </html>
