Сделана секция Основные разделы

--- a/source/index.html
+++ b/source/index.html
@@ -57,7 +57,25 @@
           </p>
         </div>
       </section>
-
+      <section class="sections-nav">
+        <h2 class="visually-hidden">Основные разделы</h2>
+        <nav class="sections-nav">
+          <div class="sections-nav__wrapper">
+            <ul class="sections-nav__list">
+              <li class="sections-nav__list--item-left">
+                <a href="interior.html">
+                  Предметы интерьера
+                </a>
+              </li>
+              <li class="sections-nav__list--item-right">
+                <a href="toys.html">
+                  Детские игрушки
+                </a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </section>
     </main>
   </body>
 </html>
