Сделаны несколько секций до контактов

--- a/source/index.html
+++ b/source/index.html
@@ -76,6 +76,115 @@
           </div>
         </nav>
       </section>
+      <section class="product">
+        <div class="product__wrapper">
+          <h2 class="product__title">Товар недели</h2>
+          <h3 class="product__name">Вязаные корзинки</h3>
+          <dl class="product__list">
+            <div class="product__item">
+              <dt class="product__number">
+                Цвет:
+              </dt>
+              <dd class="product__description">
+                «Тиффани»/серый
+              </dd>
+            </div>
+            <div class="product__item">
+              <dt class="product__number">
+                Диаметр:
+              </dt>
+              <dd class="product__description">
+                25 см
+              </dd>
+            </div>
+            <div class="product__item">
+              <dt class="product__number">
+                Высота:
+              </dt>
+              <dd class="product__description">
+                15 см
+              </dd>
+            </div>
+          </dl>
+          <img src="https://via.placeholder.com/260x315" width="260" height="315" alt="Вязаные корзинки">
+          <p class="">
+            Цена: 990 руб.
+          </p>
+          <a class="product__button button" href="#">Заказать</a>
+        </div>
+      </section>
+      <section class="advantages">
+        <div class="advantages__wrapper">
+          <h2 class="advantages__title">
+            Коротко о нас:
+          </h2>
+          <ul class="advantages__list">
+            <li class="advantages__item">
+              <img src="icon-1.svg" alt="">
+              <p class="advantages__description">Экологически чистые материалы</p>
+            </li>
+            <li class="advantages__item">
+              <img src="icon-2.svg" alt="">
+              <p class="advantages__description">Скандинавский стиль по российской цене</p>
+            </li>
+            <li class="advantages__item">
+              <img src="icon-3.svg" alt="">
+              <p class="advantages__description">Увеличивает лайки на фотографиях</p>
+            </li>
+            <li class="advantages__item">
+              <img src="icon-4.svg" alt="">
+              <p class="advantages__description">Связано вручную с любовью и умилением</p>
+            </li>
+            <li class="advantages__item">
+              <img src="icon-5.svg" alt="">
+              <p class="advantages__description">Поддержка отечественного производителя</p>
+            </li>
+            <li class="advantages__item">
+              <img src="icon-6.svg" alt="">
+              <p class="advantages__description">Поставляется в подарочной упаковке</p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="reviews">
+        <div class="reviews__wrapper slider">
+          <h2 class="reviews__title">
+            Отзывы
+          </h2>
+          <ul class="reviews__list slider__list">
+            <li class="reviews__item slider__item">
+              <p class="reviews__item--text">
+                Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!
+              </p>
+              <p class="reviews__item--name">
+                Анастасия Красильникова
+              </p>
+              <a class="reviews__item--link" href="#">
+                @misssssiskras
+              </a>
+            </li>
+            <li class="reviews__item slider__item">
+              <p class="reviews__item--text">
+                Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!
+              </p>
+              <p class="reviews__item--name">
+                Екатерина Красильникова
+              </p>
+              <a class="reviews__item--link" href="#">
+                @misssssiskras2
+              </a>
+            </li>
+          </ul>
+          <div class="reviews__buttons-container">
+            <button class="reviews__button reviews__button--left" type="button">предыдущий отзыв</button>
+            <button class="reviews__button reviews__button--right" type="button">следующий отзыв</button>
+          </div>
+          <a class="reviews__button--write" href="#">
+            Написать
+          </a>
+        </div>
+      </section>
+
     </main>
   </body>
 </html>
