--- a/source/index.html
+++ b/source/index.html
@@ -151,8 +151,8 @@
           <h2 class="reviews__title">
             Отзывы
           </h2>
-          <ul class="reviews__list slider__list">
-            <li class="reviews__item slider__item">
+          <div class="reviews__list slider__list">
+            <blockquote class="reviews__item slider__item">
               <p class="reviews__item--text">
                 Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!
               </p>
@@ -162,8 +162,8 @@
               <a class="reviews__item--link" href="#">
                 @misssssiskras
               </a>
-            </li>
-            <li class="reviews__item slider__item">
+            </blockquote>
+            <blockquote class="reviews__item slider__item">
               <p class="reviews__item--text">
                 Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!
               </p>
@@ -173,8 +173,8 @@
               <a class="reviews__item--link" href="#">
                 @misssssiskras2
               </a>
-            </li>
-          </ul>
+            </blockquote>
+          </div>
           <div class="reviews__buttons-container">
             <button class="reviews__button reviews__button--left" type="button">предыдущий отзыв</button>
             <button class="reviews__button reviews__button--right" type="button">следующий отзыв</button>
@@ -184,7 +184,60 @@
           </a>
         </div>
       </section>
-
+      <section class="contacts">
+        <div class="contacts__wrapper">
+          <h2 class="contacts__title">
+            Контакты
+          </h2>
+          <dl class="contacts__list">
+            <div class="contacts__item">
+              <dt class="contacts__termin">
+                e-mail:
+              </dt>
+              <dd class="contacts__description">
+                info@mimimishkashop.ru
+              </dd>
+            </div>
+            <div class="contacts__item">
+              <dt class="contacts__termin">
+                адрес:
+              </dt>
+              <dd class="contacts__description">
+                г. Санкт-Петербург<br> ул. Большая Конюшенная<br> д. 19/8, офис 101
+              </dd>
+            </div>
+          </dl>
+          <div class="contacts__map">
+            <img src="https://via.placeholder.com/320x454" width="320" height="454" alt="Мы на карте">
+          </div>
+          <a class="contacts__button--write-us" href="#">
+            Напишите нам
+          </a>
+        </div>
+      </section>
     </main>
+    <footer class="page-footer">
+      <div class="page-footer__wrapper">
+        <img class="logo-footer visually-hidden" src="https://via.placeholder.com/102x34" width="102" height="34">
+        <div class="page-footer__social social">
+          <b class="social__title">Давайте дружить!</b>
+          <ul class="social__list">
+            <li class="social__item">
+              <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">Мы в Инстаграме</a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--twitter" href="https://twitter.com/htmlacademy_ru">Мы в Твиттер</a>
+            </li>
+          </ul>
+        </div>
+        <div class="page-footer__copyright copyright">
+          <b class="copyright__text">Разработано:</b>
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
