Исправил согласно комментариев

--- a/source/index.html
+++ b/source/index.html
@@ -44,6 +44,9 @@
           </ul>
         </div>
       </nav>
+      <p class="page-header__slogan">
+        Бесплатная доставка по России
+      </p>
     </header>
     <main class="page-main">
       <h1 class="visually-hidden">Интернет-магазин «Мишка» — милые штуки ручной работы для дома</h1>
@@ -52,34 +55,29 @@
           <h2 class="slogan__title">
             Милые штуки ручной работы для дома
           </h2>
-          <p class="slogan__intro">
-            Бесплатная доставка по России
-          </p>
         </div>
       </section>
       <section class="sections-nav">
         <h2 class="visually-hidden">Основные разделы</h2>
-        <nav class="sections-nav">
-          <div class="sections-nav__wrapper">
-            <ul class="sections-nav__list">
-              <li class="sections-nav__list--item-left">
-                <a href="interior.html">
-                  Предметы интерьера
-                </a>
-              </li>
-              <li class="sections-nav__list--item-right">
-                <a href="toys.html">
-                  Детские игрушки
-                </a>
-              </li>
-            </ul>
-          </div>
-        </nav>
+        <div class="sections-nav__wrapper">
+          <ul class="sections-nav__list">
+            <li class="sections-nav__item sections-nav__item-left">
+              <a href="interior.html">
+                Предметы интерьера
+              </a>
+            </li>
+            <li class="sections-nav__item sections-nav__item-right">
+              <a href="toys.html">
+                Детские игрушки
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="product">
         <div class="product__wrapper">
           <h2 class="product__title">Товар недели</h2>
-          <h3 class="product__name">Вязаные корзинки</h3>
+          <h3 class="product__name heading-secondary">Вязаные корзинки</h3>
           <dl class="product__list">
             <div class="product__item">
               <dt class="product__number">
@@ -110,37 +108,31 @@
           <p class="">
             Цена: 990 руб.
           </p>
-          <a class="product__button button" href="#">Заказать</a>
+          <a class="button product-order" href="#">Заказать</a>
         </div>
       </section>
       <section class="advantages">
         <div class="advantages__wrapper">
-          <h2 class="advantages__title">
+          <h2 class="advantages__title heading-secondary">
             Коротко о нас:
           </h2>
           <ul class="advantages__list">
-            <li class="advantages__item">
-              <img src="icon-1.svg" alt="">
+            <li class="advantages__item advantages__item--eco">
               <p class="advantages__description">Экологически чистые материалы</p>
             </li>
-            <li class="advantages__item">
-              <img src="icon-2.svg" alt="">
+            <li class="advantages__item advantages__item--price">
               <p class="advantages__description">Скандинавский стиль по российской цене</p>
             </li>
-            <li class="advantages__item">
-              <img src="icon-3.svg" alt="">
+            <li class="advantages__item advantages__item--likes">
               <p class="advantages__description">Увеличивает лайки на фотографиях</p>
             </li>
-            <li class="advantages__item">
-              <img src="icon-4.svg" alt="">
+            <li class="advantages__item advantages__item--love">
               <p class="advantages__description">Связано вручную с любовью и умилением</p>
             </li>
-            <li class="advantages__item">
-              <img src="icon-5.svg" alt="">
+            <li class="advantages__item advantages__item--patriot">
               <p class="advantages__description">Поддержка отечественного производителя</p>
             </li>
-            <li class="advantages__item">
-              <img src="icon-6.svg" alt="">
+            <li class="advantages__item advantages__item--gift">
               <p class="advantages__description">Поставляется в подарочной упаковке</p>
             </li>
           </ul>
@@ -148,29 +140,29 @@
       </section>
       <section class="reviews">
         <div class="reviews__wrapper slider">
-          <h2 class="reviews__title">
+          <h2 class="reviews__title heading-secondary">
             Отзывы
           </h2>
           <div class="reviews__list slider__list">
             <blockquote class="reviews__item slider__item">
-              <p class="reviews__item--text">
+              <p class="reviews__item reviews__item--text">
                 Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!
               </p>
-              <p class="reviews__item--name">
+              <p class="reviews__item reviews__item--name">
                 Анастасия Красильникова
               </p>
-              <a class="reviews__item--link" href="#">
+              <a class="reviews__item reviews__item--link" href="#">
                 @misssssiskras
               </a>
             </blockquote>
             <blockquote class="reviews__item slider__item">
-              <p class="reviews__item--text">
+              <p class="reviews__item reviews__item--text">
                 Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!
               </p>
-              <p class="reviews__item--name">
+              <p class="reviews__item reviews__item--name">
                 Екатерина Красильникова
               </p>
-              <a class="reviews__item--link" href="#">
+              <a class="reviews__item reviews__item--link" href="#">
                 @misssssiskras2
               </a>
             </blockquote>
@@ -179,7 +171,7 @@
             <button class="reviews__button reviews__button--left" type="button">предыдущий отзыв</button>
             <button class="reviews__button reviews__button--right" type="button">следующий отзыв</button>
           </div>
-          <a class="reviews__button--write" href="#">
+          <a class="button reviews-write" href="#">
             Написать
           </a>
         </div>
@@ -189,28 +181,28 @@
           <h2 class="contacts__title">
             Контакты
           </h2>
-          <dl class="contacts__list">
+          <address class="contacts__list">
             <div class="contacts__item">
-              <dt class="contacts__termin">
+              <p class="contacts__text address-text">
                 e-mail:
-              </dt>
-              <dd class="contacts__description">
+              </p>
+              <a class="contacts__address address-text" href="mailto:info@mimimishkashop.ru">
                 info@mimimishkashop.ru
-              </dd>
+              </a>
             </div>
             <div class="contacts__item">
-              <dt class="contacts__termin">
+              <p class="contacts__text address-text">
                 адрес:
-              </dt>
-              <dd class="contacts__description">
+              </p>
+              <a class="contacts__address address-text" href="mailto:info@mimimishkashop.ru">
                 г. Санкт-Петербург<br> ул. Большая Конюшенная<br> д. 19/8, офис 101
-              </dd>
+              </a>
             </div>
-          </dl>
+          </address>
           <div class="contacts__map">
             <img src="https://via.placeholder.com/320x454" width="320" height="454" alt="Мы на карте">
           </div>
-          <a class="contacts__button--write-us" href="#">
+          <a class="button write-us" href="#">
             Напишите нам
           </a>
         </div>
