Последние замечания в Главной - классы кнопок

--- a/source/index.html
+++ b/source/index.html
@@ -108,7 +108,7 @@
           <p class="">
             Цена: 990 руб.
           </p>
-          <a class="button product-order" href="#">Заказать</a>
+          <a class="product__button button" href="#">Заказать</a>
         </div>
       </section>
       <section class="advantages">
@@ -171,7 +171,7 @@
             <button class="reviews__button reviews__button--left" type="button">предыдущий отзыв</button>
             <button class="reviews__button reviews__button--right" type="button">следующий отзыв</button>
           </div>
-          <a class="button reviews-write" href="#">
+          <a class="reviews__button button" href="#">
             Написать
           </a>
         </div>
@@ -202,7 +202,7 @@
           <div class="contacts__map">
             <img src="https://via.placeholder.com/320x454" width="320" height="454" alt="Мы на карте">
           </div>
-          <a class="button write-us" href="#">
+          <a class="contacts__button button" href="#">
             Напишите нам
           </a>
         </div>
