Переделана форма согласно замечаний

--- a/source/form.html
+++ b/source/form.html
@@ -63,95 +63,95 @@
       </section>
       <section class="main-form">
         <div class="main-form__wrapper">
-          <form class="form-order" action="https://echo.htmlacademy.ru" method="post">
-            <fieldset class="form-type">
-              <legend class="form-type__title">
+          <form class="form" action="https://echo.htmlacademy.ru" method="post">
+            <fieldset class="radio">
+              <legend class="radio__title">
                 Тип
               </legend>
-              <ul class="form-type__list">
-                <li class="form-type__item">
-                  <input class="form-type__item-radio" id="type-accessory" type="radio" name="product-type" value="accessory" checked="">
-                  <label class="form-type__item-label" id="type-accessory">Аксессуар для интерьера</label>
+              <ul class="radio__list">
+                <li class="radio__item">
+                  <input class="radio__input" id="type-accessory" type="radio" name="product-type" value="accessory" checked="">
+                  <label class="radio__label" id="type-accessory">Аксессуар для интерьера</label>
                 </li>
-                <li class="form-type__item">
-                  <input class="form-type__item-radio" id="type-toy" type="radio" name="product-type" value="toy">
-                  <label class="form-type__item-label" id="type-toy">Детская игрушка</label>
+                <li class="radio__item">
+                  <input class="radio__input" id="type-toy" type="radio" name="product-type" value="toy">
+                  <label class="radio__label" id="type-toy">Детская игрушка</label>
                 </li>
               </ul>
             </fieldset>
-            <fieldset class="form-color">
-              <legend class="form-color__title">
+            <fieldset class="checkbox">
+              <legend class="checkbox__title">
                 Цвет
               </legend>
-              <ul class="form-color__list">
-                <li class="form-color__item">
-                  <input class="form-color__item-checkbox" id="color-white" type="checkbox" name="product-color-white" checked="">
-                  <label class="form-color__item-label" id="color-white">Белый</label>
+              <ul class="checkbox__list">
+                <li class="checkbox__item">
+                  <input class="checkbox__input" id="color-white" type="checkbox" name="product-color-white" checked="">
+                  <label class="checkbox__label" id="color-white">Белый</label>
                 </li>
-                <li class="form-color__item">
-                  <input class="form-color__item-checkbox" id="color-grey" type="checkbox" name="product-color-grey" checked="">
-                  <label class="form-color__item-label" id="color-grey">Серый</label>
+                <li class="checkbox__item">
+                  <input class="checkbox__input" id="color-grey" type="checkbox" name="product-color-grey" checked="">
+                  <label class="checkbox__label" id="color-grey">Серый</label>
                 </li>
-                <li class="form-color__item">
-                  <input class="form-color__item-checkbox" id="color-tiffany" type="checkbox" name="product-color-tiffany">
-                  <label class="form-color__item-label" id="color-tiffany">«Тиффани»</label>
+                <li class="checkbox__item">
+                  <input class="checkbox__input" id="color-tiffany" type="checkbox" name="product-color-tiffany">
+                  <label class="checkbox__label" id="color-tiffany">«Тиффани»</label>
                 </li>
-                <li class="form-color__item">
-                  <input class="form-color__item-checkbox" id="color-black" type="checkbox" name="product-color-black">
-                  <label class="form-color__item-label" id="color-black">Черный</label>
+                <li class="checkbox__item">
+                  <input class="checkbox__input" id="color-black" type="checkbox" name="product-color-black">
+                  <label class="checkbox__label" id="color-black">Черный</label>
                 </li>
-                <li class="form-color__item">
-                  <input class="form-color__item-checkbox" id="color-rose" type="checkbox" name="product-color-rose">
-                  <label class="form-color__item-label" id="color-rose">Розовый</label>
+                <li class="checkbox__item">
+                  <input class="checkbox__input" id="color-rose" type="checkbox" name="product-color-rose">
+                  <label class="checkbox__label" id="color-rose">Розовый</label>
                 </li>
-                <li class="form-color__item">
-                  <input class="form-color__item-checkbox" id="color-orange" type="checkbox" name="product-color-orange">
-                  <label class="form-color__item-label" id="color-orange">Оранжевый</label>
+                <li class="checkbox__item">
+                  <input class="checkbox__input" id="color-orange" type="checkbox" name="product-color-orange">
+                  <label class="checkbox__label" id="color-orange">Оранжевый</label>
                 </li>
               </ul>
             </fieldset>
-            <fieldset class="form-fio">
-              <legend class="form-fio__title">
+            <fieldset class="form__fieldset">
+              <legend class="form__title">
                 ФИО
               </legend>
-              <ul class="form-fio__list">
-                <li class="form-fio__item">
-                  <label class="form-fio__item-label" id="fio-name">Имя:</label>
-                  <input class="form-fio__item-input" id="fio-name" type="text" name="fio-name" placeholder="Введите ваше имя*">
+              <ul class="form__list">
+                <li class="form__list-item">
+                  <label class="form__item-label" id="fio-name">Имя:</label>
+                  <input class="form__item-input" id="fio-name" type="text" name="fio-name" placeholder="Введите ваше имя*">
                 </li>
-                <li class="form-fio__item">
-                  <label class="form-fio__item-label" id="fio-surname">Фамилия:</label>
-                  <input class="form-fio__item-input" id="fio-surname" type="text" name="fio-surname" placeholder="Укажите фамилию*">
+                <li class="form__list-item">
+                  <label class="form__item-label" id="fio-surname">Фамилия:</label>
+                  <input class="form__item-input" id="fio-surname" type="text" name="fio-surname" placeholder="Укажите фамилию*">
                 </li>
-                <li class="form-fio__item">
-                  <label class="form-fio__item-label" id="fio-patronymic">Отчество:</label>
-                  <input class="form-fio__item-input" id="fio-patronymic" type="text" name="fio-patronymic" placeholder="Отчество, если желаете">
+                <li class="form__list-item">
+                  <label class="form__item-label" id="fio-patronymic">Отчество:</label>
+                  <input class="form__item-input" id="fio-patronymic" type="text" name="fio-patronymic" placeholder="Отчество, если желаете">
                 </li>
               </ul>
             </fieldset>
-            <fieldset class="form-telephone">
-              <legend class="form-telephone__title">
+            <fieldset class="form__fieldset">
+              <legend class="form__title">
                 Тел
               </legend>
-              <input class="form-telephone__item-input" type="text" name="user-telephone" placeholder="+7 ХХХ ХХХ ХХ ХХ*">
+              <input class="form__item-input" type="text" name="user-telephone" placeholder="+7 ХХХ ХХХ ХХ ХХ*">
             </fieldset>
-            <fieldset class="form-email">
-              <legend class="form-email__title">
+            <fieldset class="form__fieldset">
+              <legend class="form__title">
                 E-mail
               </legend>
-              <input class="form-email__item-input" type="text" name="user-email" placeholder="Ваш Email*">
+              <input class="form__item-input" type="text" name="user-email" placeholder="Ваш Email*">
             </fieldset>
-            <fieldset class="form-more">
-              <legend class="form-more__title">
+            <fieldset class="form__fieldset">
+              <legend class="form__title">
                 Доп
               </legend>
-              <textarea class="form-more__item-textarea" name="more-info" placeholder="Опишите все ваши пожелания к заказу"></textarea>
+              <textarea class="form__item-textarea" name="more-info" placeholder="Опишите все ваши пожелания к заказу"></textarea>
             </fieldset>
-            <p class="form-order__note">
+            <p class="form__note">
               *Поля обязательны для заполнения
             </p>
-            <button class="form-order__button button" type="button">
-              ОТПРАВИТЬ ЗАКАЗ
+            <button class="form__button button" type="button">
+              отправить заказ
             </button>
           </form>
         </div>
