Добавлены id в блок контактов

--- a/source/form.html
+++ b/source/form.html
@@ -132,22 +132,22 @@
             <fieldset class="form__fieldset form__fieldset--contacts">
               <ul class="form__list">
                 <li class="form__item">
-                  <label class="form__label form__label--contacts">
+                  <label class="form__label form__label--contacts" id="user-telephone">
                     Тел
                   </label>
-                  <input class="form__input" type="text" name="user-telephone" placeholder="+7 ХХХ ХХХ ХХ ХХ*">
+                  <input class="form__input" type="text" id="user-telephone" name="user-telephone" placeholder="+7 ХХХ ХХХ ХХ ХХ*">
                 </li>
                 <li class="form__item">
-                  <label class="form__label form__label--contacts">
+                  <label class="form__label form__label--contacts" id="user-email">
                     E-mail
                   </label>
-                  <input class="form__input" type="text" name="user-email" placeholder="Ваш Email*">
+                  <input class="form__input" type="text" id="user-email" name="user-email" placeholder="Ваш Email*">
                 </li>
                 <li class="form__item">
-                  <label class="form__label form__label--contacts">
+                  <label class="form__label form__label--contacts" id="user-text">
                     Доп
                   </label>
-                  <textarea class="form__textarea" name="more-info" placeholder="Опишите все ваши пожелания к заказу"></textarea>
+                  <textarea class="form__textarea" id="user-text" name="more-info" placeholder="Опишите все ваши пожелания к заказу"></textarea>
                 </li>
               </ul>
             </fieldset>
