Исправлен form__legend

--- a/source/form.html
+++ b/source/form.html
@@ -65,7 +65,7 @@
         <div class="main-form__wrapper">
           <form class="form" action="https://echo.htmlacademy.ru" method="post">
             <fieldset class="form__fieldset">
-              <legend class="form__title">
+              <legend class="form__legend">
                 Тип
               </legend>
               <ul class="form__list">
@@ -80,7 +80,7 @@
               </ul>
             </fieldset>
             <fieldset class="form__fieldset">
-              <legend class="form__title">
+              <legend class="form__legend">
                 Цвет
               </legend>
               <ul class="form__list">
@@ -111,7 +111,7 @@
               </ul>
             </fieldset>
             <fieldset class="form__fieldset">
-              <legend class="form__title">
+              <legend class="form__legend">
                 ФИО
               </legend>
               <ul class="form__list">
