--- a/source/form.html
+++ b/source/form.html
@@ -64,49 +64,49 @@
       <section class="main-form">
         <div class="main-form__wrapper">
           <form class="form" action="https://echo.htmlacademy.ru" method="post">
-            <fieldset class="form__fieldset">
-              <legend class="form__legend">
+            <fieldset class="radio">
+              <legend class="radio__legend">
                 Тип
               </legend>
-              <ul class="form__list">
-                <li class="form__item">
-                  <input class="form__radio-input" id="type-accessory" type="radio" name="product-type" value="accessory" checked="">
-                  <label class="form__radio-label" id="type-accessory">Аксессуар для интерьера</label>
+              <ul class="radio_list">
+                <li class="radio__item">
+                  <input class="radio__input" id="type-accessory" type="radio" name="product-type" value="accessory" checked="">
+                  <label class="radio__label" id="type-accessory">Аксессуар для интерьера</label>
                 </li>
-                <li class="form__item">
-                  <input class="form__radio-input" id="type-toy" type="radio" name="product-type" value="toy">
-                  <label class="form__radio-label" id="type-toy">Детская игрушка</label>
+                <li class="radio__item">
+                  <input class="radio__input" id="type-toy" type="radio" name="product-type" value="toy">
+                  <label class="radio__label" id="type-toy">Детская игрушка</label>
                 </li>
               </ul>
             </fieldset>
-            <fieldset class="form__fieldset">
-              <legend class="form__legend">
+            <fieldset class="checkbox">
+              <legend class="checkbox__legend">
                 Цвет
               </legend>
-              <ul class="form__list">
-                <li class="form__item">
-                  <input class="form__checkbox-input" id="color-white" type="checkbox" name="product-color-white" checked="">
-                  <label class="form__checkbox-label" id="color-white">Белый</label>
+              <ul class="checkbox__list">
+                <li class="checkbox__item">
+                  <input class="checkbox__input" id="color-white" type="checkbox" name="product-color-white" checked="">
+                  <label class="checkbox__label" id="color-white">Белый</label>
                 </li>
-                <li class="form__item">
-                  <input class="form__checkbox-input" id="color-grey" type="checkbox" name="product-color-grey" checked="">
-                  <label class="form__checkbox-label" id="color-grey">Серый</label>
+                <li class="checkbox__item">
+                  <input class="checkbox__input" id="color-grey" type="checkbox" name="product-color-grey" checked="">
+                  <label class="checkbox__label" id="color-grey">Серый</label>
                 </li>
-                <li class="form__item">
-                  <input class="form__checkbox-input" id="color-tiffany" type="checkbox" name="product-color-tiffany">
-                  <label class="form__checkbox-label" id="color-tiffany">«Тиффани»</label>
+                <li class="checkbox__item">
+                  <input class="checkbox__input" id="color-tiffany" type="checkbox" name="product-color-tiffany">
+                  <label class="checkbox__label" id="color-tiffany">«Тиффани»</label>
                 </li>
-                <li class="form__item">
-                  <input class="form__checkbox-input" id="color-black" type="checkbox" name="product-color-black">
-                  <label class="form__checkbox-label" id="color-black">Черный</label>
+                <li class="checkbox__item">
+                  <input class="checkbox__input" id="color-black" type="checkbox" name="product-color-black">
+                  <label class="checkbox__label" id="color-black">Черный</label>
                 </li>
-                <li class="form__item">
-                  <input class="form__checkbox-input" id="color-rose" type="checkbox" name="product-color-rose">
-                  <label class="form__checkbox-label" id="color-rose">Розовый</label>
+                <li class="checkbox__item">
+                  <input class="checkbox__input" id="color-rose" type="checkbox" name="product-color-rose">
+                  <label class="checkbox__label" id="color-rose">Розовый</label>
                 </li>
-                <li class="form__item">
-                  <input class="form__checkbox-input" id="color-orange" type="checkbox" name="product-color-orange">
-                  <label class="form__checkbox-label" id="color-orange">Оранжевый</label>
+                <li class="checkbox__item">
+                  <input class="checkbox__input" id="color-orange" type="checkbox" name="product-color-orange">
+                  <label class="checkbox__label" id="color-orange">Оранжевый</label>
                 </li>
               </ul>
             </fieldset>
