--- a/source/form.html
+++ b/source/form.html
@@ -68,7 +68,7 @@
               <legend class="radio__legend">
                 Тип
               </legend>
-              <ul class="radio_list">
+              <ul class="radio__list">
                 <li class="radio__item">
                   <input class="radio__input" id="type-accessory" type="radio" name="product-type" value="accessory" checked="">
                   <label class="radio__label" id="type-accessory">Аксессуар для интерьера</label>
@@ -132,21 +132,15 @@
             <fieldset class="form__fieldset form__fieldset--contacts">
               <ul class="form__list">
                 <li class="form__item">
-                  <label class="form__label form__label--contacts" id="user-telephone">
-                    Тел
-                  </label>
+                  <label class="form__label form__label--contacts" id="user-telephone">Тел</label>
                   <input class="form__input" type="text" id="user-telephone" name="user-telephone" placeholder="+7 ХХХ ХХХ ХХ ХХ*">
                 </li>
                 <li class="form__item">
-                  <label class="form__label form__label--contacts" id="user-email">
-                    E-mail
-                  </label>
+                  <label class="form__label form__label--contacts" id="user-email">E-mail</label>
                   <input class="form__input" type="text" id="user-email" name="user-email" placeholder="Ваш Email*">
                 </li>
                 <li class="form__item">
-                  <label class="form__label form__label--contacts" id="user-text">
-                    Доп
-                  </label>
+                  <label class="form__label form__label--contacts" id="user-text">Доп</label>
                   <textarea class="form__textarea" id="user-text" name="more-info" placeholder="Опишите все ваши пожелания к заказу"></textarea>
                 </li>
               </ul>
